[package]
name = "absinthe-macros"
version = "0.1.0"

license = "MIT OR Apache-2.0"
authors = ["Dimitri Gence <dmgnx@proton.me>"]

edition = "2021"

publish = false



[lib]
proc-macro = true



[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["full"] }

heck = "0.4.1"
