[package]
name = "absinthe"
version = "0.2.0"
description = "Are you an Actor & Async junkie? Then your app needs some Absinthe!"

license = "MIT OR Apache-2.0"
authors = ["Dimitri Gence <dmgnx@proton.me>"]
repository = "https://github.com/dmgnx/Absinthe"

edition = "2021"



[features]
default = ["tokio-runtime"]

tokio-runtime = ["tokio"]
async-std-runtime = ["async-std", "futures"]



[dependencies]
async-trait = "0.1.72"
async-channel = "1.9.0"
absinthe-macros = { version = "0.2.0", path = "../absinthe-macros" }

tokio = { version = "1.29.1", features = ["sync", "rt"], optional = true }

async-std = { version = "1.12.0", optional = true }
futures = { version = "0.3.28", optional = true }



[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }