[package]
name = "absinthe"
version = "0.3.0"
description = "Are you an Actor & Async junkie? Then your app needs some Absinthe!"

license = "MIT OR Apache-2.0"
authors = ["Dimitri Gence <dmgnx@proton.me>"]
repository = "https://github.com/dmgnx/Absinthe"

edition = "2021"



[features]
default = ["full"]
full = ["tokio-runtime", "test"]

test = [] 
tokio-runtime = ["tokio"]


[dependencies]
async-trait = "0.1.72"
async-channel = "1.9.0"
absinthe-macros = { version = "0.3.0", path = "../absinthe-macros" }

tokio = { version = "1.29.1", features = ["sync", "rt"], optional = true }
thiserror = "1.0.47"
petgraph = "0.6.3"
futures = "0.3.28"
tracing = "0.1.37"



[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
